updating destination name when reached

--- a/simple_flight_simulator.html
+++ b/simple_flight_simulator.html
@@ -780,6 +780,7 @@
                             latitude: getRandomArbitrary(-90, 90),
                             longitude: getRandomArbitrary(-180, 180)
                         }
+                        document.getElementById("destinationName").value = "Random";
                     };
 
                     var point = getPointAfterOffset(sourceCoords, destCoords, app.flightSpeed);
