adding COVID-19 dashboards to my website

--- a/simple_flight_simulator.html
+++ b/simple_flight_simulator.html
@@ -103,7 +103,7 @@
                     <p>
                         Please note: Smooth animations for the airplane to travel between points is not yet available, but
                         will be implemented in the future versions of the <a target="_blank"
-                            href="https://developers.arcgis.com/javascript/">ArcGIS JS API</a>. You can open settings from the menu to make changes.
+                            href="https://developers.arcgis.com/javascript/">ArcGIS JS API</a>. You can open settings from the menu to make changes to the airplane.
                     </p>
                     <div class="form-horizontal calcite-form-padding">
                         <div class="form-group">
