adding covid apps, and highlghts filter

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                     <div class="card bg-light">
                         <div class="card-body text-break">
                             <div>
-                                Jaydeep_Mistry.contact.sort(by = '<a class="text-danger">priority</a>')
+                                Jaydeep_Mistry.contact.sort(by = '<a class="text-danger">Priority</a>')
                             </div>
                         </div>
                     </div>
@@ -249,7 +249,7 @@
                         <table class="table ">
                             <thead>
                                 <tr>
-                                    <th scope="col">#</th>
+                                    <th scope="col">Priority</th>
                                     <th scope="col">Logo</th>
                                     <th scope="col">URL</th>
                                 </tr>
@@ -476,7 +476,7 @@ Styled using <a href="https://getbootstrap.com/" target="_blank">Bootstrap</a></
             };
         };
 
-        filterSelection("all");
+        filterSelection("card-highlights");
     </script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
