adding website description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <head>
     <!-- Required meta tags -->
+    <title>Jaydeep Mistry</title>
+    <meta name="Keywords"
+        content="HTML, CSS, Javascript, GitHub, Personal Website, Jupyter Notebooks, Jaydeep Mistry, GIS, data analyst, data science">
+    <meta name="Description" content="The personal website of Jaydeep Mistry. It is made to resemble a Jupyter Notebook">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -12,8 +16,6 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-    <title>Jaydeep Mistry</title>
 
     <style>
         body {
